Extract validation helpers in services
Refactor validation logic by extracting duplicated checks into helper methods for UsuarioService and AdministradorService. create/update paths in AdministradorService now call checkData(), and UsuarioService.checkData() delegates to validateNotNull, validateNombre, validateContrasena, validateEmail and validateTelefono. AdministradorService adds validateCargo as well. This centralizes validation, reduces code duplication, and standardizes regex checks and error messages for nombre, contraseña, email and teléfono.